sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:11: error: ';' expected but 'for' found.
  }for (i <- getNombreValeurs()/2 to 0){
   ^AlgCocktailSort1:18: error: 'while' expected but '}' found.
}
^